mobile overflow fix

--- a/styles/general.css
+++ b/styles/general.css
@@ -24,11 +24,12 @@ body {
 
 #disclaimer {
 	display: none;
-	height: 100vh;
+	height: calc(100vh - 50px);
 	width: 100%;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	overflow: hidden;
 }
 
 #disclaimer h2 {
